Bug 490575 - Spaces indication is too dark
Summary: Spaces indication is too dark
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: editor (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Karl Ove Hufthammer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-20 18:02 UTC by Yaron Shahrabani
Modified: 2024-08-05 23:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Line ending indication screenshot (175.32 KB, image/png)
2024-07-20 18:02 UTC, Yaron Shahrabani
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yaron Shahrabani 2024-07-20 18:02:50 UTC
Created attachment 171839 [details]
Line ending indication screenshot

SUMMARY
There's an indication for spaces at the end of the lines when using a dark theme it's really hard to distinguish between the indication and the background.

STEPS TO REPRODUCE
1. Open a po file with a multiline string that has space at the end of any of the lines


OBSERVED RESULT
The ending space indication is too dark

EXPECTED RESULT
The ending indication in dark mode should be lighter or configurable
Some lighter gray will do the trick better than the current color
Comment 1 Karl Ove Hufthammer 2024-07-26 10:33:17 UTC
And for light color schemes, the colour is too light. I’ll try to fix it.
Comment 2 Bug Janitor Service 2024-07-26 10:50:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/139
Comment 3 Albert Astals Cid 2024-08-05 23:02:23 UTC
Git commit 1705f2b631f0239ea890c9d5546d69cf1ac9247d by Albert Astals Cid, on behalf of Karl Ove Hufthammer.
Committed on 05/08/2024 at 22:59.
Pushed by aacid into branch 'master'.

Make leading/trailing spaces and other invisible character easier to see

Leading and trailing spaces are now shown using a brighter colour
(a text colour instead of a background colour) that should work well
with both light and dark colour schemes.

The colour formatting for special characters has been split into separate
rules for 1) non-breaking spaces, 2) soft hyphens, 3) leading/trailing spaces.
(Before this commit, rules 2 and 3 were combined, even though their formatting
should preferably be different.)

Also, now we specify both foreground and background colours for each rule.
This ensure that symbols used for visualization of invisible characters
(the ‘Visualize separators such as spaces, tabs and new lines in the editor’
setting) are always clearly visible (when the setting is enabled).

M  +18   -8    src/syntaxhighlighter.cpp

https://invent.kde.org/sdk/lokalize/-/commit/1705f2b631f0239ea890c9d5546d69cf1ac9247d
Comment 4 Albert Astals Cid 2024-08-05 23:10:17 UTC
Git commit bcaa18216d30195ac0047839d03c5ed72ae5b61b by Albert Astals Cid, on behalf of Karl Ove Hufthammer.
Committed on 05/08/2024 at 23:06.
Pushed by aacid into branch 'release/24.08'.

Make leading/trailing spaces and other invisible character easier to see

Leading and trailing spaces are now shown using a brighter colour
(a text colour instead of a background colour) that should work well
with both light and dark colour schemes.

The colour formatting for special characters has been split into separate
rules for 1) non-breaking spaces, 2) soft hyphens, 3) leading/trailing spaces.
(Before this commit, rules 2 and 3 were combined, even though their formatting
should preferably be different.)

Also, now we specify both foreground and background colours for each rule.
This ensure that symbols used for visualization of invisible characters
(the ‘Visualize separators such as spaces, tabs and new lines in the editor’
setting) are always clearly visible (when the setting is enabled).
(cherry picked from commit 1705f2b631f0239ea890c9d5546d69cf1ac9247d)

M  +18   -8    src/syntaxhighlighter.cpp

https://invent.kde.org/sdk/lokalize/-/commit/bcaa18216d30195ac0047839d03c5ed72ae5b61b