Make leading/trailing spaces and other invisible character easier to see

Leading and trailing spaces are now shown using a brighter colour
(a text colour instead of a background colour) that should work well
with both light and dark colour schemes.

The colour formatting for special characters has been split into separate
rules for 1) non-breaking spaces, 2) soft hyphens, 3) leading/trailing spaces.
(Before this commit, rules 2 and 3 were combined, even though their formatting
should preferably be different.)

Also, now we specify both foreground and background colours for each rule.
This ensure that symbols used for visualization of invisible characters
(the ‘Visualize separators such as spaces, tabs and new lines in the editor’
setting) are always clearly visible (when the setting is enabled).

BUG: 490575
(cherry picked from commit 1705f2b631f0239ea890c9d5546d69cf1ac9247d)